# MountyHall

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  TODO.txt  requirements.txt  results.txt  test_output.txt
data/: output.csv
include/: logger.hpp  plot.hpp  simulation.hpp  utils.hpp  worker.hpp
scripts/: build.sh  clean.sh  run.sh  test.sh
src/: main.cpp  plot.cpp  simulation.cpp  utils.cpp  worker.cpp
tests/: test_simulation.cpp  test_utils.cpp  test_worker.cpp
